--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 <!-- badges: end -->
 
-***DAG operations of ralget are now in the [`raldag`](https://github.com/ianmoran11/raldag) package.***
+*DAG operations of ralget are now in the [`raldag`](https://github.com/ianmoran11/raldag) package.*
 
 # ralget
 Ralget creates and combines graphs with algebraic operations. 
