added coverage tests

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,6 +18,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+[![Codecov test coverage](https://codecov.io/gh/ianmoran11/ralget/branch/master/graph/badge.svg)](https://codecov.io/gh/ianmoran11/ralget?branch=master)
 <!-- badges: end -->
 
 *DAG operations of ralget are now in the [`raldag`](https://github.com/ianmoran11/raldag) package.*
