--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,6 @@ editor_options:
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
@@ -16,227 +15,71 @@ knitr::opts_chunk$set(
 )
 ```
 
-<!-- badges: start -->
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
-[![Codecov test coverage](https://codecov.io/gh/ianmoran11/ralget/branch/master/graph/badge.svg)](https://codecov.io/gh/ianmoran11/ralget?branch=master)
-[![R-CMD-check](https://github.com/ianmoran11/ralget/workflows/R-CMD-check/badge.svg)](https://github.com/ianmoran11/ralget/actions)
-<!-- badges: end -->
-
-*DAG operations of ralget are now in the [`raldag`](https://github.com/ianmoran11/raldag) package.*
-
 # ralget
-Ralget creates and combines graphs with algebraic operations. 
+Ralget creates algebraic graphs in R. 
 
-```{r example,echo = FALSE, message=FALSE, warning=FALSE, include=FALSE}
+## Installation
+You can install the evelopment version from [GitHub](https://github.com/) with:
+``` r
+# install.packages("devtools")
+devtools::install_github("ianmoran11/ralget")
+```
+## Example
+This is a basic example which shows you how to solve a common problem:
+```{r example,echo = FALSE, message=FALSE, warning=FALSE}
+
 library(tidyverse)
 library(tidygraph)
 library(ggraph)
-library(patchwork)
-library(igraph)
-library(magrittr)
+library(visNetwork)
 library(ralget)
 ```
 
-```{r,echo = FALSE, message=FALSE, warning=FALSE, include=FALSE}
-format <- theme(plot.title = element_text(hjust = 0.5)) +  theme(panel.background = element_rect(fill = rgb(.95,.95,.95,1),color = NA)) 
-
-plotter <- function(graph, layout_df,title  ){
-  graph %>% 
-      ggraph(layout_df)  +
-      geom_edge_link(
-        aes(end_cap = circle(10, "pt"),
-            start_cap = circle(10, "pt")),
-        edge_colour = "black",
-        arrow = arrow(
-          angle = 15,
-          length = unit(0.15, "inches"),
-          ends = "last",
-          type = "closed"
-        )
-      ) +
-      geom_node_point(col = "grey66", size = 10, show.legend = FALSE) +
-      geom_node_text(aes(label = name)) +
-      theme_graph() + ggtitle(title) + format 
-}
-
-```
-
-### Combining Vertices 
-
-Take the following vertices:
-```{r echo=TRUE }
-p <- v("p") 
-q <- v("q") 
-s <- v("s") 
-r <- v("r") 
-```
-
-The `+` operator places vertices in the same graph.  
-The `*` operator joins one vertex to another. 
-
-```{r echo=TRUE, results = "hide" }
-g1 <- p * q + s
-g2 <- q * s + q* r
-g3 <- s * r
-```
-
-```{r echo=FALSE, message=FALSE, warning=FALSE, include = TRUE, fig.height=5, fig.width=12.5}
-g1 <- p*q+s
-g2 <- q*s+q*r
-g3 <- s*r
-gg <- (g1+g2)
-
-
-p1 <-
-  g1 %>% 
-  plotter(data.frame(x = c(1,2,2), y = c(2,2,1)),"g1 = p * q + s") +
-  xlim(c(1,3))
-
-p2 <-
-  g2 %>% 
-  plotter(data.frame(x = c(2,2,3), y = c(2,1,2)),"g2 = q * s + q * r") + 
-  xlim(c(1,3))
-
-p3 <-
-  g3 %>% 
-  plotter(data.frame(x = c(2,3), y = c(1,2)),"g3 = s * r") +
-  xlim(c(1,3))
-
-p1 + p2 + p3
-```
-
-### Combining graphs  
-#### Overlaying graphs ( + )  
-
-The `+` operator overlays graphs.
-
-
-```{r echo=FALSE, results = "hide" }
-gs <- (g1+g2)
-```
-
-```{r echo=TRUE, results = "hide" }
-g1 + g2
-```
-
-```{r echo=FALSE, message=FALSE, warning=FALSE, include = TRUE, fig.height=5, fig.width=12.5}
-format <- theme(plot.title = element_text(hjust = 0.5)) +  theme(panel.background = element_rect(fill = rgb(.95,.95,.95,1),color = NA)) 
-
-p1 <-
-g1 %>%
-    plotter(data.frame(x = c(1,2,2), y = c(2,2,1)),"g1") +
-    xlim(c(1,3))
-
-p2 <-
-g2 %>%
-    plotter(data.frame(x = c(2,2,3), y = c(2,1,2)),"g2") + 
-    xlim(c(1,3))
-
-
-p3 <-
-gs %>%
-    plotter(data.frame(x = c(1,2,2,3), y = c(2,2,1,2)),"g1 + g2") + 
-    xlim(c(1,3))
-
-p1 + p2 + p3
-
-```
-
-#### Connecting graphs ( * )  
-
-The `*` operator creates a link from each vertex in the first graph to each vertex in the second graph. 
-```{r echo=FALSE, results = "hide" }
-gp <- (g1*g3)
-```
-
-```{r echo=TRUE, results = "hide" }
-g1 * g3
-```
-```{r echo=FALSE, message=FALSE, warning=FALSE, include = TRUE, fig.height=5, fig.width=12.5}
-p1 <-
-g1 %>% plotter(data.frame(x = c(1,2,2), y = c(2,1.9,1)),"g1") + xlim(c(1,3))
-
-p2 <-
-g3 %>% plotter(data.frame(x = c(2,3), y = c(1,2)),"g2") + xlim(c(1,3))
-
-
-p3 <-
-gp %>% plotter(data.frame(x = c(1,2,2,3), y = c(2,1.90,1,2)),"g1 * g2")  
-
-p1 + p2 + p3 + 
-geom_edge_loop(end_cap = circle(10, "pt")) 
-
-```
-
-
-#### The Cartesian product ( %x% )  
-
-The `%x%` operator creates the graph product. 
-
-```{r echo=FALSE, results = "hide",  message=FALSE, warning=FALSE}
-v0 <- v(name = "00") 
-v1 <- v(name = "01") 
-v2 <- v(name = "02") 
-v3 <- v(name = "03") 
-
-A <- v("A")
-B <- v("B")
-C <- v("C")
-D <- v("D")
-E <- v("E")
-
-x = A*B+B*C+C*D+D*E+E*A
-y = v0*v1+v1*v2+v2*v3
-```
-
-```{r echo=TRUE, results = "hide" }
-x %x% y
-```
-
-```{r echo=FALSE, message=FALSE, warning=FALSE, include = TRUE, fig.height=6, fig.width=14.5}
-layout_df <-data.frame(
-  x = c(-2.25625566239723, -2.06694404978908, -1.58402956895644, -1.55953811495272, -1.89737276852298), 
-  y = c(0.138709465825545, -1.1508396186631, -0.585121176745636, 0.66449533913645, 1.38325400507676))
-
-p1 <-  x %>% plotter(layout_df,"x") + xlim(c(-4,0))
-
-layout_df <-data.frame( x = rev(c(1, 2, 3 ,4)), y = c(0, 0, 0,0)) 
-
-p2 <-  (y) %>%  plotter(layout_df,"y")
-
-p3 <- (x %x% y) %>% plotter("stress", "x %x% y") 
-p1+ p2 + p3
-```
-
-
-### Some more on vertices 
+# The building blocks of charts 
+### Vertices 
 Vertices are created with the `v()` function, which takes a name and list of attributes associated with the vertex. 
 This creates a ralget/tidygraph object:
 ```{r echo=TRUE, message=FALSE, warning=FALSE, include = TRUE}
 v("x", Latitude=  78.26077, Longitude=  -94.11077)
 ```
 
+### Combining Vertices 
 
-### Edges 
+The `+` operator overlays graphs.
 
-Edge attributes are added by interleaving e() between graph multiplication. 
+The `*` operator creates a link from each vertex on the right to each vertex on the left. 
 
-Here's a simple example:
-
-```{r echo=TRUE, results = "hide" }
-v("X1") * e("E:X1.X2") * v("X2")
+```{r echo=FALSE}
+p <- v("p"); q <- v("q"); s <- v("s"); r <- v("r"); 
+p * q + s
 ```
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, include = TRUE, fig.height=6, fig.width=14.5}
-g <- v("X1") * e("E:X1.X2") * v("X2")
-
-plot(g)
+```{r echo=FALSE, message=FALSE, warning=FALSE, include = TRUE,fig.height=3, fig.width=3}
+(p * q + s) %>% plot()
 ```
 
 
-### Installation
-You can install the development version from [GitHub](https://github.com/) with:
-``` r
-# install.packages("devtools")
-devtools::install_github("ianmoran11/ralget")
+```{r fig.height=5, fig.width=5}
+g2 <- q*s+q*r
+g1 <- p*q+s
+gg <- (g1+g2)
+library("patchwork")
+
+ (plot(g1) +  ggtitle('Plot 4') )
+
+  
+  plot(g2) + plot(gg)
+
+bind_graphs(
+  g1 %>% mutate(graph_name = "g1"),
+  g2%>% mutate(graph_name = "g2"),
+  gg %>% mutate(graph_name = "g1 + g2")
+) %>% 
+  plot() + facet_wrap(~graph_name)
+
+```
+
+```{r fig.height=5, fig.width=5}
+g3 <- s*r
+(g1*g3) %>% plot(loops = T) 
 ```
